--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-Hello world, my name is Vikram Melchizedec.
-</body>
-
+<head>
+<title>Vikram Mel</title>
+</head>
+<center><body bgcolor="000000" >
+<center><h1><font color ="white">Vikram Mel</font></h1></center>
+<center><img src ="http://imageshack.com/a/img921/1972/7pu9Py.jpg"></center>
+<p><font color ="white">Yes, that is really me onboard the titanic.</font></p>
+<p><font color="yellow"> Photo cred:Joanne Wu</font><p>
+<p></p>
+<p></p>
+<a href="https://www.linkedin.com/in/vikram-melchizedec-21938194">LinkedIn</a>
+</body><center>
 </html>
