--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <center><body bgcolor="000000" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
 <center><img src ="http://imageshack.com/a/img921/1972/7pu9Py.jpg"></center>
+<center><img src ="http://imageshack.com/a/img921/1972/7pu9Py.jpg"></center>
 <p><font color ="white">Yes, that is really me onboard the titanic.</font></p>
 <p><font color="yellow"> Photo cred:Joanne Wu</font><p>
 <p></p>
