--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vikram Mel</title>
+  <title>Vikram Melchizedec</title>
 </head>
 <center><body bgcolor="000000" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
 <center><img src ="https://cloud.githubusercontent.com/assets/21267894/19407292/d54094a6-926b-11e6-9598-684c0e2faef4.JPG" alt="Bulli face" height="200" width="300"></center>
-<p><font color ="white">Yes, that is really me onboard the titanic.</font></p>
-<p><font color="yellow"> Photo cred:Joanne Wu</font><p>
+<p><font color ="white">They say it don't be like it is but it do</font></p>
+<p><font color="yellow">- Bulli probably</font><p>
 <p></p>
 <p></p>
-<a href="https://www.linkedin.com/in/vikram-melchizedec-21938194">LinkedIn</a>
+<a href="cse.sc.edu/~vikram">Fun Links</a>
 </body><center>
 </html>
