--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <p><font color="yellow">- Bulli probably</font><p>
 <p></p>
 <p></p>
-<a href="cse.sc.edu/~vikram">Fun Links</a>
+<a href="https://cse.sc.edu/~vikram/">Fun Links</a>
 </body><center>
 </html>
