--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p><font color="yellow">- Bulli probably</font><p>
 <p></p>
 <p></p>
-  <p><font color ="white"> Hi! and welcome to my site. I'm Vikram Melchizedec... Mel. Look around and explore as I shared my photos, hobbies, interests and activities. </font> </p>
+  <p><font color ="white"> Hi! and welcome to my site. I'm Vikram Melchizedec... Mel. Look around and explore as I share my photos, hobbies, interests and activities. </font> </p>
 <p></p>
 <p></p>
 <a href="https://cse.sc.edu/~vikram/">Fun Links</a>
