--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 <body bgcolor="000000" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
-<center><img src ="https://cloud.githubusercontent.com/assets/21267894/19407292/d54094a6-926b-11e6-9598-684c0e2faef4.JPG" alt="Bulli face" height="200" width="300">
+<!--<center><img src ="https://cloud.githubusercontent.com/assets/21267894/19407292/d54094a6-926b-11e6-9598-684c0e2faef4.JPG" alt="Bulli face" height="200" width="300">-->
 <p><font color ="white">They say it don't be like it is but it do</font></p>
   <p><font color="yellow">- Bulli probably</font><p></center>
 <p></p>
 <p></p>
-  <p><font color ="white"> Hi! and welcome to my site. I'm Vikram Melchizedec... Mel. Look around and explore as I share my photos, hobbies, interests and activities. </font> </p>
+  <p><font color ="white"><font size = "20"> Hi! and welcome to my site. I'm Vikram Melchizedec... Mel. </font></font> </p>
 <p></p>
 <p></p>
 <a href="https://cse.sc.edu/~vikram/">Fun Links</a>
