--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <p></p>
 <p></p>
 <a href="https://cse.sc.edu/~vikram/">Fun Links</a>
+  <p></p>
+<p></p>
+ a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
 </body>
 </html>
