--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <p></p>
 <p></p>
  a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
+<p>fin</p>
 </body>
 </html>
