--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <a href="https://cse.sc.edu/~vikram/">Fun Links</a>
   <p></p>
 <p></p>
- a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
+ <a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
 <p><font color = "white"> fin </font></p>
 </body>
 </html>
