--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <p></p>
  <a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
 <p><font color = "white"> fin </font></p>
-  <iframe src="demo_iframe.htm" name="iframe_a"></iframe>
-  <p><a href="http://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>
+ function myMap() {
+    var mapOptions = {
+        center: new google.maps.LatLng(51.5, -0.12),
+        zoom: 10,
+        mapTypeId: google.maps.MapTypeId.HYBRID
+    }
+var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+}
 </body>
 </html>
