--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="000000" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
-<!--<center><img src ="https://cloud.githubusercontent.com/assets/21267894/19407292/d54094a6-926b-11e6-9598-684c0e2faef4.JPG" alt="Bulli face" height="200" width="300">-->
+<center><img src ="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" alt="BP1" height="200" width="300">
   
   <p><font color ="white"><font size = "15"> I'm Vikram Melchizedec... Mel. </font></font> </p>
 <p></p>
@@ -19,13 +19,6 @@
 <p></p>
  <a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
 <p><font color = "white"> fin </font></p>
- function myMap() {
-    var mapOptions = {
-        center: new google.maps.LatLng(51.5, -0.12),
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.HYBRID
-    }
-var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-}
+ 
 </body>
 </html>
