--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Vikram Melchizedec</title>
 </head>
-<body bgcolor="000000" >
+<body background="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
 <center><img src ="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" alt="BP1" height="200" width="300">
   
