--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vikram Melchizedec</title>
+  <title>Vikram 2 Melchizedec</title>
 </head>
 <body background="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" >
 <center><h1><font color ="white">Vikram Mel</font></h1></center>
