--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vikram Melchizedec</title>
+<style>
+body  {
+    background-image: url("paper.gif");
+    background-color: #cccccc;
+}
+</style>
 </head>
-<body background="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" >
-<center><h1><font color ="white">Vikram Mel</font></h1></center>
-<center><img src ="https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG" alt="BP1" height="200" width="300">
-  
-  <p><font color ="white"><font size = "15"> I'm Vikram Melchizedec... Mel. </font></font> </p>
-<p></p>
-<p></p>
-  <p><font color ="white">They say it don't be like it is but it do</font></p>
- <p><font color="yellow">- Abraham Lincon</font><p></center>
-<p></p>
-<p></p>
-<a href="https://cse.sc.edu/~vikram/">Fun Links</a>
-  <p></p>
-<p></p>
- <a href="https://github.com/UscMel/MyFiles/blob/master/FAST%20resume.docx?raw=true">Resume</a> 
-<p><font color = "white"> fin </font></p>
- 
+<body>
+
+<h1>Hello World!</h1>
+
 </body>
 </html>
+
