--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body  {
-    background-image: url("paper.gif");
+    background-image: url("https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG");
     background-color: #cccccc;
 }
 </style>
@@ -15,3 +15,7 @@ body  {
 </body>
 </html>
 
+
+<div id="bg">
+  <img src="images/bg.jpg" alt="">
+</div>
