--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html>
 <head>
 <style>
-body  {
+body {
     background-image: url("https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG");
-    background-color: #cccccc;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
 }
 </style>
 </head>
 <body>
 
-<h1>Hello World!</h1>
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
 
-
-<div id="bg">
-  <img src="images/bg.jpg" alt="">
-</div>
