--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+<title> Vikram Melchizedec </title>
 body {
     background-size: 100% auto;
     background-image: url("https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG");
@@ -9,7 +10,7 @@ body {
 
 h1 {
     color: white;
-    text-align: center;
+    text-align: centered;
 }
 
 p {
@@ -20,8 +21,8 @@ p {
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<h1>Vikram Mel</h1>
+<p></p>
 
 </body>
 </html>
