--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+h1.thick {
+    font-weight: bold;
+}
 body {
     background-size: 100% auto;
     background-image: url("https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG");
@@ -9,8 +12,9 @@ body {
 
 h1 {
     color: white;
-    height: 50%;
-    width: 50%;
+    text-align: center;
+    height: 
+  
 }
 
 p {
@@ -20,9 +24,10 @@ p {
 </style>
 </head>
 <body>
+    <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+    
+<h1 class = "thick">Vikram Mel</h1>
 
-<h1>Vikram Mel</h1>
-<p>hi hi hello</p>
 
 </body>
 </html>
