--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 h1.thick {
     font-weight: bold;
 }
+h2 {
+    font-size: 400%;
+}
 body {
     background-size: 100% auto;
     background-image: url("https://cloud.githubusercontent.com/assets/21267894/19464808/277b0b08-94cd-11e6-8ca1-6c421ae1a8b3.JPG");
@@ -24,7 +27,8 @@ p {
 </style>
 </head>
 <body>
-    <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+    <p></p>
+    <h2>    </h2>
     
 <h1 class = "thick">Vikram Mel</h1>
 
