--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ h1.thick {
 
 body {
     background-size: 100% auto;
-    background-image: url("https://www.facebook.com/photo.php?fbid=1309902845687292&set=pb.100000027668702.-2207520000.1476824923.&type=3&size=2048%2C1365");
+    background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
 }
 
 h1 {
