--- a/index.html
+++ b/index.html
@@ -27,22 +27,7 @@ p {
 </style>
 </head>
 <body>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    <p>.</p>
-    
-<h1 class = "thick">          Vikram Mel</h1>
-
-
+    <p> hello world </p>
 </body>
 </html>
 
