--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ p {
 </head>
 <body>
     <p> hello world </p>
+    <p></p>
+    <p>About</p>
+    <p></p>
+    <p>Pics</p>
+    <p></p>
+    <p>Meme Stache</p>
+    <p></p>
+    <p>Rustled Jimmies Report</p>
+    <p></p>
+    <p></p>
+    <p></p>
 </body>
 </html>
 
