--- a/index.html
+++ b/index.html
@@ -22,19 +22,24 @@ h1 {
 }
 
 p {
-    font-family: verdana;
+    font-family: Bookman Old Style;
     font-size: 20px;
+    color: silver;
 }
 </style>
 </head>
 <body>
     <p> hello world </p>
     <p></p>
+    <p></p>
     <p>About</p>
+    <p></p>
     <p></p>
     <p>Pics</p>
     <p></p>
+    <p></p>
     <p>Meme Stache</p>
+    <p></p>
     <p></p>
     <p>Rustled Jimmies Report</p>
     <p></p>
