--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h1 {
 p {
     font-family: Bookman Old Style;
     font-size: 20px;
-    color: silver;
+    color: royalblue;
 }
 </style>
 </head>
