--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@ p {
     font-size: 20px;
     color: royalblue;
 }
+p1{
+    font-family: Bookman Old Style;
+    font-size: 20px;
+    color: black;
+{
 </style>
 </head>
 <body>
     <p> hello world </p>
     <p></p>
     <p></p>
-    <p>About</p>
+    <p1>About</p1>
     <p></p>
     <p></p>
     <p>Pics</p>
