--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ p1{
     <p>Meme Stache</p>
     <p></p>
     <p></p>
-    <p>Rustled Jimmies Report</p>
+    <p><a href="https://docs.google.com/document/d/1wo7H8_Er3TRRor37tdbVzggWoCOzgGboeUakkLMvP84/edit?usp=sharing">Rustled Jimmies Report</a></p>
     <p></p>
     <p></p>
     <p></p>
