--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ p1{
     <p></p>
     <p><a href="https://docs.google.com/document/d/1wo7H8_Er3TRRor37tdbVzggWoCOzgGboeUakkLMvP84/edit?usp=sharing">Rustled Jimmies Report</a></p>
     <p></p>
-    <p></p>
+    <p><a href="https://github.com/UscMel/UscMel.github.io/blob/master/myfiles/RJR.pdf">Rustled Jimmies Report</a></p>
+    
     <p></p>
 </body>
 </html>
