--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ h1.thick {
 }
 
 body {
-    width: 100% auto;
-    height:100% auto;
+  
+    size: 100% auto;
     background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
 }
 
