--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ h1.thick {
 body {
     
     background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
-    background-size: 100% auto;
+    background-size: 100%;
+    
 }
 
 h1 {
