--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Vikram Melchizedec</title>
+<link rel="shortcut icon" href="" type="UscMel.github.io/myfiles/TabBackground.xcf" />
 <style>
 h1.thick {
     font-weight: bold;
