--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Vikram Melchizedec</title>
-<link rel="shortcut icon" href="" type="UscMel.github.io/myfiles/TabBackground.xcf" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 <style>
 h1.thick {
     font-weight: bold;
