--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p1{
     <p></p>
     <p>Meme Stache</p>
     <p></p>
-    <p><a href="<a href="UscMel.github.io/myfiles/RJR.pdf">Rustled Jimmies Report</a>">Photoshop</a></p>
+    <p><a href ="http://imgur.com/a/vDert">Photoshop</a></p>
     <p></p>
     <p></p>
     <p><a href="UscMel.github.io/myfiles/RJR.pdf">Rustled Jimmies Report</a></p>
