--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
 <head>
 <title>Vikram Melchizedec</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<style>
-h1.thick {
-    font-weight: bold;
-    font-size: 60px;
-    text-indent: 350px;
-}
-
-body {
-    
-    background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
-    background-size: 100%;
-    
-}
-
-h1 {
-    color: white;
-    text-align: center;
-    height: 
-  
-}
-
-p {
-    font-family: Bookman Old Style;
-    font-size: 20px;
-    color: royalblue;
-}
-p1{
-    font-family: Bookman Old Style;
-    font-size: 20px;
-    color: black;
-{
-</style>
+<style></style>
 </head>
 <body>
     <p> Hello world </p>
