--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Vikram Melchizedec</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<!-- link to css stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 <style></style>
 </head>
 <body>
