--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <p></p>
     <p></p>
     <p1>About</p1>
+    		<ul>
+        		
+	        	<li><a href="/vikrammel.github.io/about">About</a></li>
+        		
+    		</ul>
     <p></p>
     <p></p>
     <p>Pics</p>
