--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> Hello world </p>
     <p></p>
     <p></p>
-    <p1><ul><li><a href="/vikrammel.github.io/about">About</a></li></ul></p1>
+    <p1><ul><li><a href="/about">About</a></li></ul></p1>
     		
     <p></p>
     <p></p>
