--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+  <title>Vikram Melchizedec</title>
+  <!-- link to css stylesheet -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <style></style>
+  </head>
+  <body>
+  </body>
+</html>
