--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <p></p>
     <p></p>
     <p1><ul><li><a href="/about">About</a></li></ul></p1>
-    		
+    <p></p>
+    <p><a href ="https://uscmel.github.io/about/">About</a></p>
+    <p></p>
+    <p></p>
     <p></p>
     <p></p>
     <p>Pics</p>
