--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 <style></style>
 </head>
 <body>
-    <p> Hello world </p>
-    <p></p>
-    <p></p>
-    <p1><ul><li><a href="/about">About</a></li></ul></p1>
+   
+  
     <p></p>
     <p><a href ="https://uscmel.github.io/about/">About</a></p>
     <p></p>
@@ -25,7 +23,7 @@
     <p><a href ="http://imgur.com/a/vDert">Photoshop</a></p>
     <p></p>
     <p></p>
-    <p><a href="UscMel.github.io/myfiles/RJR.pdf">Rustled Jimmies Report</a></p>
+   <!--<p><a href="UscMel.github.io/myfiles/RJR.pdf">Rustled Jimmies Report</a></p>-->
     
     <p></p>
 </body>
