--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <p></p>
     <p></p>
     <p></p>
-    <p>Pics</p>
+    <!--<p>Pics</p>-->
     <p></p>
     <p></p>
-    <p>Meme Stache</p>
+    <!--<p>Meme Stache</p>-->
     <p></p>
     <p><a href ="http://imgur.com/a/vDert">Photoshop</a></p>
     <p></p>
