--- a/about/index.html
+++ b/about/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
   <h1.thick> Who am I? </h1.thick>
+    <p1>I am Mel, Vikram Gnanaolivu Melchizedec </p1>
+    <footer>Contact Me:</footer>
   </body>
 </html>
