--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <style></style>
 </head>
+   body {
+    
+    background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: -10;
+    overflow: hidden
+    
+}
 <body>
    
   
